Create squash fritters recipe page
Add content to recipe page

--- a/recipes/squash-fritters.html
+++ b/recipes/squash-fritters.html
@@ -1,1 +1,41 @@
-<h1>Squash Fritters</h1>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <title>Squash Fritters</title>
+    </head>
+
+    <body>
+        <h1>Squash Fritters</h1>
+        <img src="../img/squashfritters.jpeg">
+        <h2>Description</h2>
+        <p> Tender, juicy, fragrant pancakes.
+            Prepare simply and quickly.
+            They can be served with sour cream or sour cream and garlic sauce.
+            From the specified amount of ingredients, 12-15 pieces are obtained.
+        </p>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>800g squash</li>
+            <li>2 eggs</li>
+            <li>120-150g flour</li>
+            <li>greens to taste</li>
+            <li>salt</li>
+            <li>pepper</li>
+            <li>vegetable oil</li>
+        </ul>
+        <h2>Steps</h2>
+        <ol>
+            <li>Cut greens finely.</li>
+            <li>Grate zucchini on a fine grater.
+                If the zucchini is large, peel them and remove the seeds.
+                If they are very juicy, drain the juice.</li>
+            <li>Add eggs and mix.</li>
+            <li>Add greens and mix.</li>
+            <li>Salt, pepper.</li>
+            <li>Add flour and mix.</li>
+            <li>Warm up the oil. Lay out the fritters. Fry for 5-7 minutes.</li>
+            <li>Flip. Fry for 5-7 minutes.</li>
+        </ol>
+    </body>
+</html>
