Add links to main page and alt tags

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/squash-fritters.html">Squash Fritters</a>
+        <ul>
+            <li><a href="./recipes/squash-fritters.html">Squash Fritters</a></li>
+            <li><a href="./recipes/pies-with-onion-and-eggs.html">Pies wit onion ang eggs</a></li>
+            <li><a href="./recipes/fried-eggs.html">Fried eggs</a></li>
+        </ul>
     </body>
 </html>
