--- a/recipes/squash-fritters.html
+++ b/recipes/squash-fritters.html
@@ -7,7 +7,7 @@
 
     <body>
         <h1>Squash Fritters</h1>
-        <img src="../img/squashfritters.jpeg">
+        <img src="../img/squashfritters.jpeg" alt="Squash fritters">
         <h2>Description</h2>
         <p> Tender, juicy, fragrant pancakes.
             Prepare simply and quickly.
