Commit my pages

--- a/recipes/pies-with-onion-and-eggs.html
+++ b/recipes/pies-with-onion-and-eggs.html
@@ -7,7 +7,7 @@
 
     <body>
         <h1>Pies with onions and eggs</h1>
-        <img src="../img/pieswithonionandeggs.jpeg">
+        <img src="../img/pieswithonionandeggs.jpeg" alt="Pies with onion and eggs">
         <h2>Description</h2>
         <p>The filling is prepared very quickly and simply.
             And the pies are so delicious! Summer scent!
