--- a/recipes/fried-eggs.html
+++ b/recipes/fried-eggs.html
@@ -3,10 +3,11 @@
     <head>
         <meta charset="utf-8">
         <title>Fried eggs with ham and tomatoes</title>
+        <link rel="stylesheet" href="../styles.css">
     </head>
 
     <body>
-        <h1>Fried eggs with ham and tomatoes</h1>
+        <h1 class="headingsrecipes">Fried eggs with ham and tomatoes</h1>
         <img src="../img/friedeggs.jpeg" alt="Fried eggs with ham and tomatoes">
         <h2>Description</h2>
         <p>Easy, quick, hearty meal for breakfast.
