--- a/recipes/pies-with-onion-and-eggs.html
+++ b/recipes/pies-with-onion-and-eggs.html
@@ -3,10 +3,11 @@
     <head>
         <meta charset="utf-8">
         <title>Pies with onions and eggs</title>
+        <link rel="stylesheet" href="../styles.css">
     </head>
 
     <body>
-        <h1>Pies with onions and eggs</h1>
+        <h1 class="headingsrecipes">Pies with onions and eggs</h1>
         <img src="../img/pieswithonionandeggs.jpeg" alt="Pies with onion and eggs">
         <h2>Description</h2>
         <p>The filling is prepared very quickly and simply.
