--- a/recipes/squash-fritters.html
+++ b/recipes/squash-fritters.html
@@ -3,10 +3,11 @@
     <head>
         <meta charset="utf-8">
         <title>Squash Fritters</title>
+        <link rel="stylesheet" href="../styles.css">
     </head>
 
     <body>
-        <h1>Squash Fritters</h1>
+        <h1 class="headingsrecipes">Squash Fritters</h1>
         <img src="../img/squashfritters.jpeg" alt="Squash fritters">
         <h2>Description</h2>
         <p> Tender, juicy, fragrant pancakes.
