--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title>Odin Recipes</title>
-    </head>
-
-    <body>
-        <h1>Odin Recipes</h1>
-        <ul>
-            <li><a href="./recipes/squash-fritters.html">Squash Fritters</a></li>
-            <li><a href="./recipes/pies-with-onion-and-eggs.html">Pies wit onion ang eggs</a></li>
-            <li><a href="./recipes/fried-eggs.html">Fried eggs</a></li>
-        </ul>
-    </body>
+  <head>
+      <meta charset="utf-8">
+      <title>Odin Recipes</title>
+      <link rel="stylesheet" href="styles.css">
+  </head>
+  <body>
+      <h1 class="sitename">Odin Recipes</h1>
+      <ul class="names mainstyleposition">
+          <li><a href="./recipes/squash-fritters.html">Squash Fritters</a></li>
+          <li><a href="./recipes/pies-with-onion-and-eggs.html">Pies wit onion ang eggs</a></li>
+          <li><a href="./recipes/fried-eggs.html">Fried eggs</a></li>
+      </ul>
+  </body>
 </html>
