Add new CSS for main page

--- a/index.html
+++ b/index.html
@@ -6,11 +6,15 @@
       <link rel="stylesheet" href="styles.css">
   </head>
   <body>
+    <div class="mainpage">
       <h1 class="sitename">Odin Recipes</h1>
-      <ul class="names mainstyleposition">
-          <li><a href="./recipes/squash-fritters.html">Squash Fritters</a></li>
-          <li><a href="./recipes/pies-with-onion-and-eggs.html">Pies wit onion ang eggs</a></li>
-          <li><a href="./recipes/fried-eggs.html">Fried eggs</a></li>
-      </ul>
+      <div class="recipes">
+        <ul>
+          <li class="mainrec"><a style="color: red;" href="./recipes/squash-fritters.html">Squash Fritters</a></li>
+          <li class="mainrec"><a style="color: red;" href="./recipes/pies-with-onion-and-eggs.html">Pies with onion ang eggs</a></li>
+          <li class="mainrec"><a style="color: red;" href="./recipes/fried-eggs.html">Fried eggs</a></li>
+        </ul>
+      </div>
+    </div>    
   </body>
 </html>
