--- a/recipes/pies-with-onion-and-eggs.html
+++ b/recipes/pies-with-onion-and-eggs.html
@@ -7,35 +7,37 @@
     </head>
 
     <body>
-        <h1 class="headingsrecipes">Pies with onions and eggs</h1>
-        <img src="../img/pieswithonionandeggs.jpeg" alt="Pies with onion and eggs">
-        <h2>Description</h2>
-        <p>The filling is prepared very quickly and simply.
-            And the pies are so delicious! Summer scent!
-            From the indicated amount of ingredients, about 15 pieces are obtained.
-        </p>
-        <h2>Ingredients</h2>
-        <ul>
-            <li>Yeast dough</li>
-            <li>5 eggs</li>
-            <li>100g green onions</li>
-            <li>salt</li>
-            <li>pepper</li>
-        </ul>
-        <h2>Steps</h2>
-        <ol>
-            <li>Eggs cut into cubes.</li>
-            <li>Finely chop the onion.</li>
-            <li>Mix eggs and onions.</li>
-            <li>Salt, pepper.</li>
-            <li>Form small cakes from the dough.</li>
-            <li>Lay out the filling. Pinch the edges.</li>
-            <li>Grease a baking sheet with oil or cover with baking paper.
-                Lay out the patties (seam side down).</li>
-            <li>If desired, the pies can be greased with a beaten egg.
-                Let the pies rise.
-                Put in an oven preheated to 180 degrees.
-                Bake for 15-20 minutes.</li>
-        </ol>
+        <div>
+            <h1 class="headingsrecipes">Pies with onions and eggs</h1>
+            <img src="../img/pieswithonionandeggs.jpeg" alt="Pies with onion and eggs">
+            <h2>Description</h2>
+            <p>The filling is prepared very quickly and simply.
+                And the pies are so delicious! Summer scent!
+                From the indicated amount of ingredients, about 15 pieces are obtained.
+            </p>
+            <h2>Ingredients</h2>
+            <ul>
+                <li>Yeast dough</li>
+                <li>5 eggs</li>
+                <li>100g green onions</li>
+                <li>salt</li>
+                <li>pepper</li>
+            </ul>
+            <h2>Steps</h2>
+            <ol>
+                <li>Eggs cut into cubes.</li>
+                <li>Finely chop the onion.</li>
+                <li>Mix eggs and onions.</li>
+                <li>Salt, pepper.</li>
+                <li>Form small cakes from the dough.</li>
+                <li>Lay out the filling. Pinch the edges.</li>
+                <li>Grease a baking sheet with oil or cover with baking paper.
+                    Lay out the patties (seam side down).</li>
+                <li>If desired, the pies can be greased with a beaten egg.
+                    Let the pies rise.
+                    Put in an oven preheated to 180 degrees.
+                    Bake for 15-20 minutes.</li>
+            </ol>
+        </div>
     </body>
 </html>
